Add Open API for Clustering
